--- a/src/components/Courses/Courses.module.css
+++ b/src/components/Courses/Courses.module.css
@@ -8,6 +8,7 @@
 
 .courses-header {
 	display: flex;
+	flex-wrap: wrap-reverse;
 	align-items: center;
 	justify-content: space-between;
 	gap: 20px;
