--- a/src/components/Courses/components/SearchBar/SearchBar.module.css
+++ b/src/components/Courses/components/SearchBar/SearchBar.module.css
@@ -3,8 +3,10 @@
 	flex-direction: row;
 	justify-content: space-between;
 	gap: 10px;
+	flex-grow: 1;
 }
 
 .search-form input {
-	min-width: 350px;
+	min-width: 200px;
+	flex-grow: 1;
 }
